--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </header>
             <aside>
                 <ul>
-                    <li><a href="#primero">T.1 - GIT</a>
+                    <li><a href="index.html">T.1 - GIT</a>
                         <ul>
                             <li><a href="#segundo">1.1 - Control de versiones</a></li>
                             <li><a href="#tercero">1.2 - Áreas de trabajo</a></li>
@@ -30,11 +30,16 @@
                             <li><a href="#sexto">1.5 - Trabajando con ramas</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Tema 2</a>
+                    <li><a href="protocolos.html#primero">T.2 - HTTPS / DNS</a>
                         <ul>
-                            <li><a href="#">2.1</a></li>
-                            <li><a href="#">2.2</a></li>
-                            <li><a href="#">2.3</a></li>
+                            <li><a href="protocolos.html#segundo">2.1 - Protocolo HTTPS</a></li>
+                            <li><a href="protocolos.html#tercero">2.2 - Protocolo HTTP</a></li>
+                            <li><a href="protocolos.html#cuarto">2.3 - MVC</a></li>
+                            <li><a href="protocolos.html#quinto">2.4 - GET y POST</a></li>
+                            <li><a href="protocolos.html#sexto">2.5 - HTTP vs HTTPs</a></li>
+                            <li><a href="protocolos.html#septimo">2.6 - Códigos de estado</a></li>
+                            <li><a href="protocolos.html#octavo">2.7 - DNS</a></li>
+                            <li><a href="protocolos.html#novena">2.8 - Tipos de resolución</a></li>
                         </ul>
                     </li>
                     <li><a href="#">Tema 3</a>
@@ -42,13 +47,6 @@
                             <li><a href="#">3.1</a></li>
                             <li><a href="#">3.2</a></li>
                             <li><a href="#">3.3</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">Tema 4</a>
-                        <ul>
-                            <li><a href="#">4.1</a></li>
-                            <li><a href="#">4.2</a></li>
-                            <li><a href="#">4.3</a></li>
                         </ul>
                     </li>
                 </ul>
