--- a/protocolos.html
+++ b/protocolos.html
@@ -21,7 +21,7 @@
             </header>
             <aside>
                 <ul>
-                    <li><a href="index.html">T.1 - GIT</a>
+                    <li><a href="index.html#primero">T.1 - GIT</a>
                         <ul>
                             <li><a href="index.html#segundo">1.1 - Control de versiones</a></li>
                             <li><a href="index.html#tercero">1.2 - Áreas de trabajo</a></li>
@@ -42,11 +42,14 @@
                             <li><a href="#novena">2.8 - Tipos de resolución</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Tema 3</a>
+                    <li><a href="apache.html#primero">T.3 - Apache</a>
                         <ul>
-                            <li><a href="#">3.1</a></li>
-                            <li><a href="#">3.2</a></li>
-                            <li><a href="#">3.3</a></li>
+                            <li><a href="apache.html#segundo">3.1 - Características</a></li>
+                            <li><a href="apache.html#tercero">3.2 - Arquitectura</a></li>
+                            <li><a href="apache.html#cuarto">3.3 - Contextos</a></li>
+                            <li><a href="apache.html#quinto">3.4 - Buenas prácticas</a></li>
+                            <li><a href="apache.html#sexto">3.5 - Directivas</a></li>
+                            <li><a href="apache.html#septimo">3.6 - Estructura</a></li>
                         </ul>
                     </li>
                 </ul>
